tests/name_resolution/exposure/circular-exposure-reach.lushui
;; XXX
;; TEST fail check
;; @Task group the errors by cycle, provide more information

@(public here) module there =
@(public there) module here =

